--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install deps
         run: npm ci
 
+- name: Run tests
+  run: npm run test
+
       - name: Build
         run: npm run build
 
